--- a/proposal106.4/index.html
+++ b/proposal106.4/index.html
@@ -7,7 +7,12 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body { font-family: sans-serif; margin: 10px; }
-    pre { background: #f9f9f9; padding: 10px; white-space: pre-wrap; word-break: break-word; }
+    pre {
+      background: #f9f9f9;
+      padding: 10px;
+      white-space: pre-wrap;
+      word-break: break-word;
+    }
     .controls { display: flex; flex-wrap: wrap; gap: 16px; margin-top: 20px; }
     .control { display: flex; flex-direction: column; }
     .control label { margin-bottom: 4px; font-size: 0.9em; }
@@ -55,7 +60,7 @@
 
   <div id="loading">Loading data<span id="dots"></span></div>
 
-  <div class="table-container" id="tableWrapper" style="display:none;">
+  <div id="tableWrapper" class="table-container" style="display:none;">
     <table id="votesTable">
       <thead>
         <tr>
@@ -100,148 +105,296 @@
   </div>
 
   <script>
-    // Helpers
-    function fmt(n, d=2) { return n.toLocaleString(undefined, { minimumFractionDigits:d, maximumFractionDigits:d }); }
-    function parseNum(s) { return parseFloat(String(s).replace(/,/g,'').replace('%',''))||0; }
-    function debounce(fn, wait=800){ let t; return(...a)=>{clearTimeout(t);t=setTimeout(()=>fn(...a),wait)} }
+    // Formatting & parsing helpers
+    function fmt(num, dec=2) {
+      return num.toLocaleString(undefined, {
+        minimumFractionDigits: dec,
+        maximumFractionDigits: dec
+      });
+    }
+    function parseNum(str) {
+      return parseFloat(String(str).replace(/,/g, '').replace('%','')) || 0;
+    }
+    function debounce(fn, wait=800) {
+      let t;
+      return (...args) => {
+        clearTimeout(t);
+        t = setTimeout(() => fn(...args), wait);
+      };
+    }
 
-    // Chart
+    // DOM refs
+    const divisor      = document.getElementById('divisor');
+    const rTotal       = document.getElementById('rTotal');
+    const pCap         = document.getElementById('pCap');
+    const rMarketCap   = document.getElementById('rMarketCap');
+    const loadingEl    = document.getElementById('loading');
+    const dotsEl       = document.getElementById('dots');
+    const tableWrapper = document.getElementById('tableWrapper');
+    const apiBlock     = document.getElementById('apiTotalsContainer');
+
+    // Chart.js setup
     const ctx = document.getElementById('curveChart').getContext('2d');
     let curveChart;
-    function computeCurve(M, R, D) {
-      if (!R||!D) return [{x:0,y:1+M}];
-      const pts=[], step=R/50;
-      for (let b=0; b<=R; b+=step) {
-        pts.push({ x:b, y:1 + M * Math.exp(-b/(R/D)) });
+    function computeCurve(maxBoost, rmc, div) {
+      if (!rmc || !div) return [{ x:0, y:1+maxBoost }];
+      const pts = [], step = rmc / 50;
+      for (let b=0; b<=rmc; b+=step) {
+        pts.push({ x: b, y: 1 + maxBoost * Math.exp(-b/(rmc/div)) });
       }
       return pts;
     }
-    function updateChart(){
-      let D=parseNum(divisor.value)||5,
-          RT=parseNum(rTotal.value), PC=parseNum(pCap.value);
-      if(RT<0) RT=0; if(PC<0) PC=0;
-      const RMC=RT*PC/100;
-      rMarketCap.value = fmt(RMC,2);
-      const cA=computeCurve(0.3,RMC,D), cB=computeCurve(0.5,RMC,D);
-      if(!curveChart){
-        curveChart=new Chart(ctx,{
-          type:'line',
-          data:{datasets:[
-            {label:'MaxBoost 0.3',data:cA,borderColor:'blue',fill:false,parsing:{xAxisKey:'x',yAxisKey:'y'}},
-            {label:'MaxBoost 0.5',data:cB,borderColor:'red', fill:false,parsing:{xAxisKey:'x',yAxisKey:'y'}}
-          ]},
-          options:{scales:{x:{type:'linear',title:{display:true,text:'Bribe'}},y:{title:{display:true,text:'Boost'}}}}
+    function updateChart() {
+      let D = parseNum(divisor.value) || 5;
+      let RT = parseNum(rTotal.value);
+      let PC = parseNum(pCap.value);
+      if (RT < 0) RT = 0;
+      if (PC < 0) PC = 0;
+      const RMC = RT * PC / 100;
+      rMarketCap.value = fmt(RMC, 2);
+
+      const dataA = computeCurve(0.3, RMC, D);
+      const dataB = computeCurve(0.5, RMC, D);
+
+      if (!curveChart) {
+        curveChart = new Chart(ctx, {
+          type: 'line',
+          data: {
+            datasets: [
+              { label: 'MaxBoost 0.3', data: dataA, borderColor: 'blue', fill: false,
+                parsing: { xAxisKey: 'x', yAxisKey: 'y' } },
+              { label: 'MaxBoost 0.5', data: dataB, borderColor: 'red', fill: false,
+                parsing: { xAxisKey: 'x', yAxisKey: 'y' } }
+            ]
+          },
+          options: {
+            scales: {
+              x: { type: 'linear', title: { display: true, text: 'Bribe' } },
+              y: { title: { display: true, text: 'Boost' } }
+            }
+          }
         });
       } else {
-        curveChart.data.datasets[0].data=cA;
-        curveChart.data.datasets[1].data=cB;
+        curveChart.data.datasets[0].data = dataA;
+        curveChart.data.datasets[1].data = dataB;
         curveChart.update();
       }
     }
 
-    // Recalc rows & debounce
-    function recalcAll(){
+    // Recalculate all rows
+    function recalcAll() {
       document.querySelectorAll('#votesTable tbody tr').forEach(tr => {
-        const vIn = tr.querySelector('input.vote'),
-              bIn = tr.querySelector('input.bribe'),
-              dynC = tr.cells[4], dmpC = tr.cells[5], stC = tr.cells[2];
-        const base = parseNum(vIn.value),
-              st   = parseNum(stC.getAttribute('data-static')),
-              br   = parseNum(bIn.value);
-        // static adj
-        const sAdj = base>0 ? base*st : base;
-        stC.textContent = fmt(sAdj,2);
-        // dynamic boost
-        let dyn = st>1.5 ? st : (base>0 ? 1 + (st-1)*Math.exp(-br/(parseNum(rMarketCap.value)/parseNum(divisor.value))) : st);
-        dynC.textContent = dyn.toFixed(5);
-        // dampened
-        const dVal = base>0 ? base*dyn : base;
-        dmpC.textContent = fmt(dVal,2);
+        const voteIn  = tr.querySelector('input.vote');
+        const bribeIn = tr.querySelector('input.bribe');
+        const staticCell  = tr.cells[2];
+        const dynCell     = tr.cells[4];
+        const dampCell    = tr.cells[5];
+
+        const votes = parseNum(voteIn.value);
+        const bribe = parseNum(bribeIn.value);
+        const staticBoost = tr.staticBoost;
+
+        // Static Adj Votes
+        const sAdj = votes > 0 ? votes * staticBoost : votes;
+        staticCell.textContent = fmt(sAdj, 2);
+
+        // Dynamic Boost
+        let dyn;
+        if (staticBoost > 1.5) {
+          dyn = staticBoost;
+        } else if (votes > 0) {
+          const maxB = staticBoost - 1;
+          const RMC = parseNum(rMarketCap.value);
+          const D   = parseNum(divisor.value) || 5;
+          dyn = 1 + maxB * Math.exp(-bribe / (RMC / D));
+        } else {
+          dyn = staticBoost;
+        }
+        dynCell.textContent = dyn.toFixed(5);
+
+        // Dampened Adj Votes
+        const dVal = votes > 0 ? votes * dyn : votes;
+        dampCell.textContent = fmt(dVal, 2);
       });
       updateShares();
     }
-    const debounced = debounce(()=>{ updateChart(); recalcAll() }, 800);
 
-    // Hooks
-    ['divisor','rTotal','pCap'].forEach(id => document.getElementById(id).addEventListener('input', debounced));
+    // Debounced control updates
+    const debouncedUpdate = debounce(() => {
+      updateChart();
+      recalcAll();
+    }, 800);
+    [divisor, rTotal, pCap].forEach(el =>
+      el.addEventListener('input', debouncedUpdate)
+    );
 
-    // Fetch & build
-    const API='https://voting-tracker.aqua.network/api/voting-snapshot/top-volume/?limit=200',
-          HORIZON='https://horizon.stellar.org/accounts/';
-    let dot=0, intv=setInterval(()=>{ dot=(dot+1)%4; dots.textContent='.'.repeat(dot); },500);
-
-    async function fetchMarkets(){
-      let all=[], url=API;
-      while(url){
-        const js=await (await fetch(url)).json();
+    // Fetching markets & trustlines
+    const API     = 'https://voting-tracker.aqua.network/api/voting-snapshot/top-volume/?limit=200';
+    const HORIZON = 'https://horizon.stellar.org/accounts/';
+    async function fetchMarkets() {
+      let all = [], url = API;
+      while (url) {
+        const res = await fetch(url);
+        const js  = await res.json();
         all.push(...js.results);
-        url=js.next;
+        url = js.next;
       }
       return all;
     }
-    async function fetchTrustlines(k){
-      try{
-        const js=await (await fetch(HORIZON+k)).json();
-        const bal=js.balances||[],
-              hasX=bal.some(b=>b.asset_type==='native'),
-              nonX=bal.filter(b=>b.asset_type!=='native').map(b=>b.asset_code);
-        if(nonX.length>=2) return nonX;
-        if(nonX.length===1&&hasX) return [nonX[0],'XLM'];
-        if(hasX) return ['XLM'];
+    async function fetchTrustlines(key) {
+      try {
+        const res = await fetch(HORIZON + key);
+        const js  = await res.json();
+        const bal = js.balances || [];
+        const hasX = bal.some(b => b.asset_type === 'native');
+        const nonX = bal.filter(b => b.asset_type !== 'native')
+                        .map(b => b.asset_code);
+        if (nonX.length >= 2) return nonX;
+        if (nonX.length === 1 && hasX) return [ nonX[0], 'XLM' ];
+        if (hasX) return ['XLM'];
         return nonX;
-      } catch { return ['XLM']; }
+      } catch {
+        return ['XLM'];
+      }
     }
 
-    function calcStatic(arr){
-      let s=1;
-      if(arr.includes('AQUA')) s+=0.5;
-      if(arr.includes('XLM'))  s+=0.3;
-      if(arr.includes('USDC')) s+=0.3;
-      return s;
-    }
-
-    async function init(){
+    // Build rows & initialize
+    async function init() {
       updateChart();
-      const mkts = await fetchMarkets(),
-            ats  = await Promise.all(mkts.map(m=>fetchTrustlines(m.market_key))),
-            frag = document.createDocumentFragment();
 
-      mkts.forEach((m,i)=>{
-        const base = parseNum(m.votes_value),
-              st   = calcStatic(ats[i]),
-              tr   = document.createElement('tr');
+      const mkts = await fetchMarkets();
+      const assetsList = await Promise.all(mkts.map(m => fetchTrustlines(m.market_key)));
+      const tbody = document.querySelector('#votesTable tbody');
 
-        // store static boost in data-static for recalc
-        const staticCell = `<td data-static="${st}">${fmt(base>0?base*st:base,2)}</td>`;
+      mkts.forEach((m, i) => {
+        const row = document.createElement('tr');
+        const assets = assetsList[i];
+        const marketLabel = assets.join(' / ');
+        const origVotes = parseNum(m.votes_value);
+        const staticBoost = calcStatic(assets);
 
-        tr.innerHTML = `
-          <td>${ats[i].join(' / ')}</td>
-          <td><input class="vote" type="number" step="any" value="${base}"></td>
-          ${staticCell}
+        row.staticBoost = staticBoost;
+
+        row.innerHTML = `
+          <td>${marketLabel}</td>
+          <td><input class="vote" type="number" step="any" value="${origVotes}"></td>
+          <td></td>
           <td><input class="bribe" type="number" value="0" min="0"></td>
-          <td>${st.toFixed(5)}</td>
-          <td>${fmt(base>0?base*st:base,2)}</td>
+          <td></td>
+          <td></td>
           <td>0.00000%</td>
           <td>0.00000%</td>
-          <td>0.00</td>`;
+          <td>0.00</td>
+        `;
 
-        // attach recalc to both inputs
-        tr.querySelector('input.vote').addEventListener('input', recalcAll);
-        tr.querySelector('input.bribe').addEventListener('input', recalcAll);
+        // Wire inputs
+        row.querySelector('input.vote').addEventListener('input', recalcAll);
+        row.querySelector('input.bribe').addEventListener('input', recalcAll);
 
-        frag.appendChild(tr);
+        tbody.appendChild(row);
       });
 
-      document.querySelector('#votesTable tbody').appendChild(frag);
       recalcAll();
-      clearInterval(intv);
-      loading.style.display='none';
-      tableWrapper.style.display='block';
+      clearInterval(loadingInterval);
+      loadingEl.style.display = 'none';
+      tableWrapper.style.display = 'block';
       await fetchApiTotals();
     }
 
-    // updateShares() and fetchApiTotals() unchanged from previous version…
+    // Static boost calc
+    function calcStatic(arr) {
+      let b = 1;
+      if (arr.includes('AQUA')) b += 0.5;
+      if (arr.includes('XLM'))  b += 0.3;
+      if (arr.includes('USDC')) b += 0.3;
+      return b;
+    }
 
+    // Vote share, capping & redistribution, rewards & totals
+    function updateShares() {
+      const rows = Array.from(document.querySelectorAll('#votesTable tbody tr'));
+      const dampVals = rows.map(r => parseNum(r.cells[5].textContent));
+      const totalDamp = dampVals.reduce((a, b) => a + b, 0);
+
+      // raw vote share
+      const rawShares = dampVals.map(v => totalDamp ? v / totalDamp * 100 : 0);
+      rows.forEach((r, i) => {
+        r.cells[6].textContent = rawShares[i].toFixed(5) + '%';
+      });
+
+      // filter >0.5%
+      let qualifiers = rows
+        .map((r, i) => ({ row: r, pct: rawShares[i] }))
+        .filter(x => x.pct >= 0.5);
+
+      // cap at 10%, compute excess
+      let excess = qualifiers
+        .reduce((sum, q) => sum + Math.max(0, q.pct - 10), 0);
+
+      // uncapped sum
+      let uncapped = qualifiers.filter(q => q.pct <= 10);
+      let sumUncapped = uncapped.reduce((sum, q) => sum + q.pct, 0) || 1;
+
+      // final adjusted share
+      qualifiers.forEach(q => {
+        let finalPct = q.pct > 10
+          ? 10
+          : q.pct + q.pct / sumUncapped * excess;
+        q.row.cells[7].textContent = finalPct.toFixed(5) + '%';
+      });
+
+      // AQUA rewards
+      const RT = parseNum(rTotal.value);
+      qualifiers.forEach(q => {
+        const adj = parseNum(q.row.cells[7].textContent);
+        q.row.cells[8].textContent = fmt(RT * adj / 100, 2);
+      });
+
+      // footer totals
+      const sumVotes  = rows.map(r => parseNum(r.cells[1].querySelector('input').value)).reduce((a,b)=>a+b,0);
+      const sumStatic = rows.map(r => parseNum(r.cells[2].textContent)).reduce((a,b)=>a+b,0);
+      const sumDamp   = dampVals.reduce((a,b)=>a+b,0);
+      const sumShare  = rawShares.reduce((a,b)=>a+b,0);
+      const sumAdj    = qualifiers.reduce((a,q)=>a+parseNum(q.row.cells[7].textContent),0);
+      const sumR      = qualifiers.reduce((a,q)=>a+parseNum(q.row.cells[8].textContent),0);
+
+      document.getElementById('totalVotesFooterVotes').textContent   = fmt(sumVotes,2);
+      document.getElementById('totalStaticFooter').textContent      = fmt(sumStatic,2);
+      document.getElementById('totalDampFooter').textContent        = fmt(sumDamp,2);
+      document.getElementById('totalShareFooter').textContent       = sumShare.toFixed(5) + '%';
+      document.getElementById('totalShareAdjustFooter').textContent = sumAdj.toFixed(5)   + '%';
+      document.getElementById('totalRewardsFooter').textContent     = fmt(sumR,2);
+    }
+
+    // API vote totals
+    async function fetchApiTotals() {
+      let a=0, u=0, d=0, url=API;
+      while (url) {
+        const js = await (await fetch(url)).json();
+        (js.results||[]).forEach(item => {
+          (item.extra?.upvote_assets||[]).forEach(x => {
+            const v = parseNum(x.votes_sum);
+            if (x.asset.startsWith('AQUA:'))       a += v;
+            else if (x.asset.startsWith('upvoteICE:')) u += v;
+          });
+          (item.extra?.downvote_assets||[]).forEach(x => {
+            const v = parseNum(x.votes_sum);
+            if (x.asset.startsWith('downvoteICE:')) d += v;
+          });
+        });
+        url = js.next;
+      }
+      document.getElementById('apiAqua').textContent    = fmt(a,2);
+      document.getElementById('apiUpICE').textContent  = fmt(u,2);
+      document.getElementById('apiDownICE').textContent= fmt(d,2);
+      document.getElementById('apiTotal').textContent  = fmt(a+u+d,2);
+      apiBlock.style.display = 'block';
+    }
+
+    // start
+    const loadingInterval = setInterval(() => {
+      dots.textContent = '.'.repeat((parseNum(dots.textContent.length)+1)%4);
+    }, 500);
     init();
   </script>
 </body>
